# computergraphics

./: .gitignore
asteroids/: CMakeLists.txt  game.cc  game.h  game_controller.h  game_test  game_test.cc  geometry.cbp  geometry.h  geometry_test  geometry_test.cc  main_game  main_game.cc  math_test  physics.cc  physics.h  physics.tcc  physics_test  physics_test.cc  renderer.h  sdl2_game_controller.cc  sdl2_game_controller.h  sdl2_renderer.cc  sdl2_renderer.h  sound.cc  sound.h  timer.cc  timer.h
asteroids_opengl/: CMakeLists.txt  debug.h  game.cc  game.h  game_controller.h  game_test  game_test.cc  geometry.h  geometry.tcc  geometry_test  geometry_test.cc  main_game  main_game.cc  math.h  math_test  matrix.cc  matrix.h  matrix_test  opengl_renderer.cc  opengl_renderer.h  physics.cc  physics.h  physics.tcc  physics_test  physics_test.cc  renderer.h  sdl2_game_controller.cc  sdl2_game_controller.h  sdl2_renderer.cc  sdl2_renderer.h  sound.cc  sound.h  timer.cc  timer.h
geometry/: CMakeLists.txt  geometry.h  geometry.tcc  geometry_test  math_test
geometry/math/: math.tcc  math_test.cc
math/: CMakeLists.txt  math.cc
matrix/: CMakeLists.txt  math.tcc  math_test  matrix.tcc  matrix_test  matrix_test.cc
raytracer/: CMakeLists.txt  geometry_test  math_test  raytracer  raytracer.cc
raytracer/geometry/: geometry.cc  geometry.h  geometry.tcc
raytracer/math/: math.cc  math.h  math.tcc
raytracer/utility/: color.cc  color.h  helper.h  light.cc  light.h
raytracer/view/: camera.cc  camera.h  viewport.cc  viewport.h  window.cc  window.h
raytracer/world/: world.cc  world.h
raytracer/world/objects/: material.cc  material.h
